added local storage for each input

--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
- 
+  text-align: left;
+  
 }
 
 .hour {
@@ -44,6 +45,7 @@ textarea {
   color: #000000;
   border-top: 1px dashed #000000;
   width: 75px;
+  text-align: center;
 }
 
 .past {
